Fixed overflow

--- a/style.css
+++ b/style.css
@@ -149,7 +149,6 @@ transparent black text box over it, with the upper margin being the same percent
     }
     .footer{
         align-items: center;
-        margin-left: 30%;
     }
 }
 
